Testing files added

--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
-{
+{ 
+  "name": "nestjs-typeorm-api",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "build": "nest build",
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
   "dependencies": {
     "@nestjs/common": "^11.1.6",
     "@nestjs/core": "^11.1.6",
