--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@nestjs/cli": "^11.0.10",
     "@nestjs/testing": "^11.1.6",
     "@types/jest": "^30.0.0",
     "@types/supertest": "^6.0.3",
