--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
-{ 
+{
   "name": "nestjs-typeorm-api",
   "version": "1.0.0",
-  "scripts": {
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+ "scripts": {
+    "start": "node -r dotenv/config dist/main.js",
+    "start:dev": "node -r dotenv/config ./node_modules/@nestjs/cli/bin/nest.js start --watch",
     "build": "nest build",
-    "test": "jest",
-    "test:watch": "jest --watch"
-  },
+    "test": "node -r dotenv/config ./node_modules/.bin/jest",
+    "test:watch": "node -r dotenv/config ./node_modules/.bin/jest --watch"
+    },
   "dependencies": {
     "@nestjs/common": "^11.1.6",
     "@nestjs/core": "^11.1.6",
@@ -16,6 +16,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "dotenv": "^17.2.3",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
