--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   db:
     image: postgres:16
@@ -6,18 +5,26 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: parameters_db
-    ports: ["5432:5432"]
-    volumes: ["db_data:/var/lib/postgressql/data"]
+    ports:
+      - "5432:5432"
+    volumes:
+      - db_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U admin"]
+      test: ["CMD-SHELL", "pg_isready -U admin -d parameters_db"]
       interval: 5s
       retries: 10
+
   api:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     env_file: .env
-    ports: ["3000:3000"]
     depends_on:
       db:
         condition: service_healthy
+    ports:
+      - "3000:3000"
+    command: ["node", "dist/main.js"]
+
 volumes:
   db_data:
